--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <div class="main">
       <div class="top_main">
         <img src="images/image-jeremy.png" alt="jeremy">
-        Report for
-        Jeremy Robson
+        <p class="report">Report for</p>
+        <p class="name">Jeremy Robson</p>
       </div>
-      Daily
-      Weekly
-      Monthly
+      <div class="options">
+        <p class="daily">Daily</p>
+        <p class="weekly">Weekly</p>
+        <p class="mothly">Monthly</p>
+      </div>
     </div>
     <div class="work">
       <div class="top_work">
