--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+  <script defer src="script.js"></script>
   <title>Frontend Mentor | Time tracking dashboard</title>
 </head>
 <body>
@@ -17,9 +18,9 @@
         <p class="name">Jeremy Robson</p>
       </div>
       <div class="options">
-        <p class="daily">Daily</p>
-        <p class="weekly">Weekly</p>
-        <p class="mothly">Monthly</p>
+        <a href="#" class="daily" id="daily" style="text-decoration:none">Daily</a>
+        <a href="#" class="weekly" id="weekly" style="text-decoration:none">Weekly</a>
+        <a href="#" class="mothly" id="monthly" style="text-decoration:none">Monthly</a>
       </div>
     </div>
     <div class="work">
