--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <p class="name">Jeremy Robson</p>
       </div>
       <div class="options">
-        <a href="#" class="daily" id="daily" style="text-decoration:none">Daily</a>
-        <a href="#" class="weekly" id="weekly" style="text-decoration:none">Weekly</a>
-        <a href="#" class="mothly" id="monthly" style="text-decoration:none">Monthly</a>
+        <a href="" class="daily" id="daily" style="text-decoration:none">Daily</a>
+        <a href="" class="weekly" id="weekly" style="text-decoration:none">Weekly</a>
+        <a href="" class="mothly" id="monthly" style="text-decoration:none">Monthly</a>
       </div>
     </div>
     <div class="work">
@@ -29,8 +29,8 @@
           Work
           <img src="images/icon-ellipsis.svg" alt="dots">
         </div>
-        <div class="hrs_work">32hrs</div>
-        <div class="last_week_work">Last Week - 36hrs</div>
+        <div class="hrs_work" id="hrs_work">32hrs</div>
+        <div class="last_week_work" id="last_week_work">Last Week - 36hrs</div>
       </div>
     </div>
     <div class="play">
@@ -39,8 +39,8 @@
           Play
           <img src="images/icon-ellipsis.svg" alt="dots">
         </div>
-        <div class="hrs_play">10hrs</div>
-        <div class="last_week_play">Last Week - 8hrs</div>
+        <div class="hrs_play" id="hrs_play">10hrs</div>
+        <div class="last_week_play" id="last_week_play">Last Week - 8hrs</div>
       </div>
     </div>
     <div class="study">
@@ -49,8 +49,8 @@
           Study
           <img src="images/icon-ellipsis.svg" alt="dots">
         </div>
-        <div class="hrs_study">4hrs</div>
-        <div class="last_week_study">Last Week - 7hrs</div>
+        <div class="hrs_study" id="hrs_study">4hrs</div>
+        <div class="last_week_study" id="last_week_study">Last Week - 7hrs</div>
       </div>
     </div>  
     <div class="exercise">
@@ -59,8 +59,8 @@
           Exercise
           <img src="images/icon-ellipsis.svg" alt="dots">
         </div>
-        <div class="hrs_exercise">4hrs</div>
-        <div class="last_week_exercise">Last Week - 5hrs</div>
+        <div class="hrs_exercise" id="hrs_exercise">4hrs</div>
+        <div class="last_week_exercise" id="last_week_exercise">Last Week - 5hrs</div>
       </div>
     </div>
     <div class="social">
@@ -69,8 +69,8 @@
           Social
           <img src="images/icon-ellipsis.svg" alt="dots">
         </div>
-        <div class="hrs_social">5hrs</div>
-        <div class="last_week_social">Last Week - 10hrs</div>
+        <div class="hrs_social" id="hrs_social">5hrs</div>
+        <div class="last_week_social" id="last_week_social">Last Week - 10hrs</div>
       </div>
     </div>
     <div class="selfcare">
@@ -79,8 +79,8 @@
           Self Care
           <img src="images/icon-ellipsis.svg" alt="dots" fill="white">
         </div>
-        <div class="hrs_self-care">2hrs</div> 
-        <div class="last_week_self-care">Last Week - 2hrs</div>
+        <div class="hrs_self-care" id="hrs_self-care">2hrs</div> 
+        <div class="last_week_self-care" id="last_week_self-care">Last Week - 2hrs</div>
       </div>
     </div>    
   </section>
